FEAT aggiunto box con testo - nella colonna

--- a/index.html
+++ b/index.html
@@ -15,8 +15,14 @@
       <div class="conteiner">
     <!-- ROW, N.5 -->
     <!-- COLUMN,N.7 -->
+    <!-- box interno Icona+nome -->
        <div class="row">
-          <div class="col"></div>
+          <div class="col">
+            <div class="name">
+                <i></i>
+                <h3>Pinco Pallo</h3>
+            </div>
+          </div>
           <div class="col"></div>
           <div class="col"></div>
           <div class="col"></div>
